change to pool tracker

--- a/local.env.example
+++ b/local.env.example
@@ -1,5 +1,16 @@
-RPC_URL=YOUR_WSS_RPC_URL
+HTTP_URL=YOUR_HTTP_RPC_URL
+WSS_URL=YOUR_WSS_RPC_URL
 
-# Token and pool addresses to track
-TOKEN=0x2f6c17fa9f9bC3600346ab4e48C0701e1d5962AE
-POOL=0xFdbAf04326AcC24e3d1788333826b71E3291863a
+DATABASE_URL=postgres://user:password@localhost/your_db_name
+
+# Pool addresses to track
+POOLS=0xFdbAf04326AcC24e3d1788333826b71E3291863a,0x738dA5029fbAF977b4820B46AAa945b7B23D9b5b
+
+# block_from rpc delay (ms) to help with rate limiting
+BLOCK_FROM_RPC_DELAY=0
+
+# retry config 
+RETRY_MAX_ATTEMPTS=3
+RETRY_INITIAL_BACKOFF_MS=100
+RETRY_MAX_BACKOFF_MS=10000
+RETRY_BACKOFF_MULTIPLIER=2.0
