--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-alloy = {version = "0.9.2", features = ["consensus", "contract", "eips", "network", "providers","provider-ws", "pubsub", "rpc", "rpc-types", "sol-types", "json-abi"]}
+alloy = {version = "0.9.2", features = ["consensus", "contract", "eips", "network", "providers","provider-ws", "transport-http", "pubsub", "rpc", "rpc-types", "sol-types", "json-abi", "reqwest"]}
 eyre = "0.6.12"
 tokio = { version = "1.43.0", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = [
@@ -20,3 +20,6 @@ serde_json = "1.0.135"
 futures-util = { version = "0.3", features = [], default-features = false }
 futures = { version = "0.3", default-features = false }
 clap = { version = "4.4", features = ["derive"] }
+diesel = { version = "2.2.0", features = ["postgres", "numeric"] }
+bigdecimal = { version = "0.4.1", features = ["serde"] }
+dotenv = "0.15.0"
