changed to grab pools to monitor from deployments

--- a/local.env.example
+++ b/local.env.example
@@ -1,10 +1,13 @@
-HTTP_URL=YOUR_HTTP_RPC_URL
-WSS_URL=YOUR_WSS_RPC_URL
+HTTP_URL=
+WSS_URL=
 
 DATABASE_URL=postgres://user:password@localhost/your_db_name
 
-# Pool addresses to track
-POOLS=0xFdbAf04326AcC24e3d1788333826b71E3291863a,0x738dA5029fbAF977b4820B46AAa945b7B23D9b5b
+# Pool deployer addresses to monitor pools for (outer most contract that creates pools)
+POOL_DEPLOYER_CONTRACT_ADDRESSES=0x732560fa1d1A76350b1A500155BA978031B53833,0x9B84fcE5Dcd9a38d2D01d5D72373F6b6b067c3e1,0x375C15db32D28cEcdcAB5C03Ab889bf15cbD2c5E
+
+# Uniswap V3 factory address on target chain 
+UNISWAP_V3_FACTORY_ADDRESS=0x33128a8fC17869897dcE68Ed026d694621f6FDfD
 
 # block_from rpc delay (ms) to help with rate limiting
 BLOCK_FROM_RPC_DELAY=0
